<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec.edu.com.epn.konwarriosapp.CrearGenero">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/tituloCrearGenero"
        android:id="@+id/textView3"
        android:textColor="#0b0b0b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreGenero"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:id="@+id/textView5" />

    <EditText
        android:id="@+id/ETNombreGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_material_light"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guardarGenero"
        android:text="@string/guardarGenero"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonGuardarGenero" />

</RelativeLayout>
